|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-05-20 Benedikt Heintel
	- DISTRIBUTIONS:
		* added freeBSD
	- ENGINE:
		* fixed #297: wrong named awstats.ispcp_tpl.conf in domain manager

2007-05-19 Raphael Geissert
	- GUI
		* Fixed #286: login after session timed out gives message
		* Added pending patches from my first submission
		* Fixed #290: upload folder for pma is wrong

2007-05-19 Benedikt Heintel
	- SETUP
		* Fixed Regexp for Hostname

2007-05-17 Raphael Geissert
	- SETUP
		* Fixed cp -a compatiblity issue

2007-05-17 Henriks
	- GUI
		* Fixed #214

2007-05-16 Malte Geierhos
	- GUI
		* Fixed #260 missing icons

2007-05-16 Jan Porath
	- SETUP
		* Fixed #269: wrong mail setting in master php.ini

2007-05-15 Raphael Geissert
	- GUI
		* Improved fix for #271: logout does not function

2007-05-15 Jan Porath
	- GUI
		* Fixed #271: logout does not function
	- SETUP
		* Fixed #272: crontab setup fails

2007-05-14 Raphael Geissert
	- GUI
		* Fixed #268: undefined index on Login Page
	- SETUP
		* Fixed #179: crontab was overwritten by installing ispcp

2007-05-13 Jan Porath
	-	GUI
		* fixed #222: special chars problem in hostingplan
	-	ENGINE
		* fixed #232: restoring db-backups does not work

2007-05-13 Malte Geierhos / Joximu
	- GUI
		* fixed password encryption with suhosin patch #265

	- ENGINE
		* fixed wrong Versionstrings in openbsd, redhat, sles9, ubuntu

2007-05-07 Benedikt Heintel
	- LANGUAGES:
		* Japanes: added missing strings
		* Turkish: added missing strings
		* Polish: added missing strings

2007-05-11 Jan Porath
	-	ENGINE
		* fixed #228: .htaccess still stayed after deleting proteced area
		              wrong user and group deleting